force-app/main/default/objects/SecurityIntegration__mdt/SecurityIntegration__mdt.object-meta.xml
<CustomObject>
    <description>[Legacy] 사내망 Interface__c 와 SOAR 액션을 사후 연동할 때만 사용하는 언매니지드 전용 라우팅 메타데이터 (패키지 배제 대상)</description>
    <label>SecurityIntegration (Legacy)</label>
</CustomObject>