force-app/main/default/objects/SecurityIntegration__mdt/fields/InterfaceId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceId__c</fullName>
    <label>InterfaceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>