force-app/main/default/objects/SecurityIntegration__mdt/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>